KULRICE-6757: Correction detected in sonar; gave small improvement to performance